--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Server Offline</title>
+	<title>Oops!</title>
 	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/mDpZ9mU.png">
 	<link rel="shortcut icon" href="https://i.imgur.com/mDpZ9mU.png">
 
@@ -32,15 +32,15 @@
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
-				<h1>Offline</h1>
+				<h1>Oops!</h1>
 			</div>
-			<h2>Oops! Nothing was found</h2>
-			<p>Some services have been discontinued from 2022.<br>The page you are viewing now seems to be a closed service.<br><a href="http://s.ungb.in">Visit developer site</a></p>
+			<h2>Nothing was found</h2>
+			<p>Some services have been removed from this adress.<br>It looks like you've connected to a service that has been shut down.<br><a href="http://s.ungb.in">Visit developer site</a></p>
 			<div class="notfound-social">
-				<a href="https://www.facebook.com/sungb.1/"><i class="fa fa-facebook"></i></a>
-				<a href="https://www.instagram.com/sungb.1/"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.facebook.com/fbsungbin/"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.instagram.com/igsungbin/"><i class="fa fa-instagram"></i></a>
 				<a href="https://www.youtube.com/sungb1"><i class="fa fa-youtube"></i></a>
-				<a href="https://www.linkedin.com/in/nadasungbin/"><i class="fa fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/insungbin/"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 	</div>
