--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h1>Oops!</h1>
 			</div>
 			<h2>Nothing was found</h2>
-			<p>Some services have been removed from this adress.<br>It looks like you've connected to a service that has been shut down.<br><a href="http://s.ungb.in">Visit developer site</a></p>
+			<p>Some services have been removed from this address.<br>It looks like you've connected to a service that has been shut down.<br><a href="http://s.ungb.in">Visit developer site</a></p>
 			<div class="notfound-social">
 				<a href="https://www.facebook.com/fbsungbin/"><i class="fa fa-facebook"></i></a>
 				<a href="https://www.instagram.com/igsungbin/"><i class="fa fa-instagram"></i></a>
